src/test/ui/rfc-2627-raw-dylib/link-ordinal-and-name.stderr
warning: the feature `raw_dylib` is incomplete and may cause the compiler to crash
  --> $DIR/link-ordinal-and-name.rs:1:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: cannot use `#[link_name]` with `#[link_ordinal]`
  --> $DIR/link-ordinal-and-name.rs:7:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

